2003-11-03  Michael Yount <csf@moscow.com>

	* setup/install_util.pl:  (copy_file)  If a link was requested
	and the Mj2 and CGI directories occupy different partitions,
	use a symbolic link.
	Thanks to Eric Sorenson.

2003-11-02  Michael Yount <csf@moscow.com>

	* lib/Mj/Addr.pm:  (_xform)  Add safe ops for perl 5.8.1
	compatability.

	* lib/Mj/Resend.pm:  (_check_header, _check_body, _r_strip_body)
	Add safe ops for perl 5.8.1 compatibility.

	* lib/Mj/Util.pm:  (process_rule, re_match)  Add safe ops
	for perl 5.8.1 compatibility.
	Thanks to Brock Rozen.

2003-11-01  Michael Yount <csf@moscow.com>

	* Makefile.PL:  Compensate for changes in the MakeMaker
	installbin routine.  Thanks to Devin Reade.

2003-10-29  Michael Yount <csf@moscow.com>

	* lib/Mj/MIMEParser.pm:  (parse_open)  Bugfix:  Call
	parse_in() instead of parse_open() as needed to allow
	Mj2 to work with MIME::Tools version 4 again.

	* lib/Mj/Resend.pm:  (_r_ck_header)  Bugfix:  Initialize
	the dup_msg_id access variable correctly to avoid 
	tickling the tainting bug in perl 5.5 and earlier versions.

2003-10-28  Michael Yount <csf@moscow.com>

	* bin/mj_enqueue:  Cope better with empty messages.
	Thanks to SRE.

	* lib/Mj/BounceHandler.pm:  Rewrite to use messages
	instead of hard-coded English.
	(handle_bounce_message)  Compensate for truncated VERP
	addresses.  Thanks to Jeff Wasilko.

	* lib/Mj/BounceParser.pm:  (parse_dsn)  Cope with DSN
	irregularities.  Thanks to Jeff Wasilko.

	* lib/Mj/CommandProps.pm:  Allow the "reason" action
	to be used in the bounce_rules setting.

	* lib/Mj/Config.pm:  (_compile_rule, _ck_var)  Bugfix:
	Allow variables to be used on the right side of comparisons.
	Thanks to SRE.

	* lib/Mj/SimpleDB/Text.pm:  (get_matching*regexp)  Bugfix:
	Remove anchors before calling Mj::File::search().
	Thanks to Eric Luhrs.

2003-10-07  Michael Yount <csf@moscow.com>

	* lib/Mj/Access.pm:  (_d_post)  Bugfix:  Use the correct